--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "focus-visible": "^5.2.0",
     "framer-motion": "^10.16.4",
     "geist": "^1.0.1",
-    "next": "^14.0.1",
+    "next": "^16.1.1",
     "next-themes": "^0.2.0",
     "plaiceholder": "^3.0.0",
     "postcss-focus-visible": "^9.0.0",
@@ -44,15 +44,15 @@
     "@types/react-dom": "^18.0.5",
     "@types/rss": "^0.0.30",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.50.0",
-    "eslint-config-next": "^13.0.2",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "globby": "^13.1.1",
-    "next-seo": "^6.1.0",
+    "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
     "postcss": "^8.4.14",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.2.2"
   },
   "license": "MIT"
